--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,95 @@
-/*
 *{
-    padding: 0;
     margin: 0;
+    padding: 0;
 }
-#logo{
-    width: 7vw;
-    height: 12vh;
+.conteiner{
+    background-color: rgb(112, 39, 180);
+    color: white;
+    font-size: 1.3em;
+    text-align: right;
+    width: 100%;
 }
-.contenedor{
-    background-color:rgb(115, 23, 219);
+.conteiner .list{
+    text-decoration: none;
 }
-*/
+.conteiner .list li{
+    border-radius: 5px;
+    display: inline-block;
+    padding: 22px;
+}
+.conteiner .list li:hover{
+    background-color: grey;
+    cursor: pointer;
+}
+.png{
+    height: 30px;
+    float: left;
+    position: relative;
+    top: 18px;
+    left: 10px;
+}
+.subtitle{
+    text-align: center;
+    font-size: 2em;
+}
+.conteiner1{
+    display: flex;
+    justify-content: center;
+    padding: 30px;
+}
+.hosting{
+    display: inline-block;
+    text-align: center;
+    padding: 30px;
+    font-family: 'Comfortaa', cursive;
+    border: 1px solid rgba(0,0,0, 0.17);
+}
+h3{
+    font-size: 1.8em;
+}
+.ahorra{
+    position: relative;
+    top: 20px;
+    padding: 25px;
+¡}
+del{
+    padding:20px;
+}
+.precio{
+    font-size: 1.4em;
+}
+.ahorra2{
+    padding: 25px;
+}
+.mes{
+    color: rgb(96, 2, 202);
+    font-size: 1.6em;
+}
+.dos{
+    color:red
+}
+.tres{
+    background-color: red !important;
+}
+.tres:hover{
+    background-color: rgb(199, 106, 106) !important;
+}
+
+.carro{
+    background-color: rgb(96, 2, 202);
+    padding: 20px;
+    position: relative;
+    top: 30px;
+    border-radius: 10px;
+    color: white;
+    font-size: 1em;
+
+}
+.carro:hover{
+    background-color: rgb(125, 112, 138);
+    cursor: pointer;
+}
+.hosting:hover{
+    transform: scale(1.1);
+    transition: .5s;
+}
